test/sema/assignment_lhs_error.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
fn main() -> void {
    s.f = y;
    // CHECK: [[# @LINE - 1 ]]:11: error: symbol 'y' not found
}